force-app/main/default/objects/Account/fields/AMPOriginal_Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>AMPOriginal_Salesforce_ID__c</fullName>
    <externalId>true</externalId>
    <label>AMPOriginal Salesforce ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>