force-app/main/default/objects/Account/fields/Test_Branch_10__c.field-meta.xml
<CustomField>
    <fullName>Test_Branch_10__c</fullName>
    <label>Test Branch 10</label>
    <length>20</length>
    <type>Text</type>
</CustomField>