force-app/main/default/objects/Account/fields/Test_Field_01__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_01__c</fullName>
    <label>Test Field 01</label>
    <length>30</length>
    <type>Text</type>
</CustomField>