force-app/main/default/objects/Account/fields/Test_Field_QA_Account__c.field-meta.xml
<CustomField>
    <fullName>Test_Field_QA_Account__c</fullName>
    <label>Test Field QA Account</label>
    <length>30</length>
    <type>Text</type>
</CustomField>